--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -413,6 +413,7 @@ Library
         TcErrors
         TcTyClsDecls
         TcTyDecls
+        TcTypeable
         TcType
         TcEvidence
         TcUnify
